Adding Edit Pop Up

--- a/DemoWebApplication/Views/Books/SearchBook.cshtml
+++ b/DemoWebApplication/Views/Books/SearchBook.cshtml
@@ -1,5 +1,4 @@
-﻿@using DemoWebApplication.Models
-@model BooksViewModel
+﻿@model DemoWebApplication.Models.BooksViewModel
 @{
     ViewBag.Title = "SearchBook";
 }
@@ -7,8 +6,8 @@
     <script src="~/Scripts/jquery-3.6.0.js"></script>
     <script src="~/Scripts/jquery.validate.js"></script>
     <script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
-    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
     <script src="~/Scripts/jquery.unobtrusive-ajax.js"></script>
+    <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
 
 </head>
 <h2>SearchBook</h2>
@@ -21,21 +20,21 @@
 
         @{
             @Html.TextBoxFor(
-     model => model.BookName,
-     null,
-     new { @class = "form-control", @placeholder = "Enter Book Name " })
+model => model.BookName,
+null,
+new { @class = "form-control", @placeholder = "Enter Book Name " })
 
             @Html.DropDownListFor(
-     model => model.BookCategoryId,
-     new SelectList(Model.BooksCategoriesList, "BookCategoryId", "BookCategoryName"),
-     "Select Cateogry",
-     new { @class = "form-control" })
+model => model.BookCategoryId,
+new SelectList(Model.BooksCategoriesList, "BookCategoryId", "BookCategoryName"),
+"Select Cateogry",
+new { @class = "form-control" })
 
             @Html.DropDownListFor(
-     model => model.BookPublisherId,
-     new SelectList(Model.BooksPublicationsList, "BookPublisherId", "BookPublisherName"),
-     "Select Publisher",
-     new { @class = "form-control" })
+model => model.BookPublisherId,
+new SelectList(Model.BooksPublicationsList, "BookPublisherId", "BookPublisherName"),
+"Select Publisher",
+new { @class = "form-control" })
 
 
             @Html.HiddenFor(model => model.PageNumber, new { @Value = Model.PageNumber })
@@ -51,13 +50,13 @@
             <br />
             <b class="text-info">Page Size : </b>
             @Html.DropDownList(
-    "PageSize",
-    new List<SelectListItem> {
+"PageSize",
+new List<SelectListItem> {
                new SelectListItem { Text = "3", Value = "3" },
                new SelectListItem { Text = "5", Value = "5" },
                new SelectListItem { Text = "10", Value = "10" },
                new SelectListItem { Text = "100", Value = "100" }},
-    new { @class = "form-control" })
+new { @class = "form-control" })
 
             <br />
         }
@@ -73,89 +72,94 @@
 
 <!-- Modal -->
 
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
 
-            <form id="popupAddBookForm" class="form-inline" method="post">
+<form id="popupAddBookForm" class="form-inline" method="post">
 
-                @using (Ajax.BeginForm("AddBook", "Books", new AjaxOptions { HttpMethod = "POST", UpdateTargetId = "#tb", OnSuccess = "successCall()", OnFailure = "failCall", OnComplete = "SearchBtnClick()" })) {
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2 class="modal-title" id="exampleModalLabel">Add Book</h2>
+                    <button id="closeBtn" type="button" class="close" onclick="this.form.reset()" data-dismiss="modal" aria-labe l="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div id="msgPopup"></div>
+                    @*@Html.ValidationSummary()*@
+                    @Html.HiddenFor(
+                                model => model.BookId)
+                    <b>Name : </b>
+                    @Html.TextBoxFor(
+                          model => model.BookName,
+                          null,
+                          new { @id = "SearchBookName", @class = "form-control", @placeholder = "Enter Book Name " })
 
-                    <div class="modal-header">
-                        <h2 class="modal-title" id="exampleModalLabel">Add Book</h2>
-                        <button id="closeBtn" type="button" class="close" onclick="this.form.reset()" data-dismiss="modal" aria-labe l="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
+                    @Html.ValidationMessageFor(model => model.BookName, null, new { @class = "text-danger" })<br />
 
-                        <div id="msgPopup"></div>
+                    <b>Cateogry : </b>
+                    @Html.DropDownListFor(
+                             model => model.BookCategoryId,
+                             new SelectList(Model.BooksCategoriesList, "BookCategoryId", "BookCategoryName"),
+                             "Select Cateogry", new { @id = "SearchBookCategory", @class = "form-control" })
 
+                    @Html.ValidationMessageFor(model => model.BookCategoryId, null, new { @class = "text-danger" })<br />
+                    <b>Publication : </b>
+                    @Html.DropDownListFor(
+                             model => model.BookPublisherId,
+                             new SelectList(Model.BooksPublicationsList, "BookPublisherId", "BookPublisherName"),
+                             "Select Publisher", new { @id = "SearchBookPublication", @class = "form-control" })
 
-                        @Html.HiddenFor(
-                                    model => model.BookId)
-                        <b>Name : </b>
-                        @Html.TextBoxFor(
-                              model => model.BookName,
-                              null,
-                              new { @class = "form-control", @placeholder = "Enter Book Name " })
-
-                        @Html.ValidationMessageFor(model => model.BookName, null, new { @class = "text-danger" })<br />
-                        <b>Cateogry : </b>
-                        @Html.DropDownListFor(
-                                 model => model.BookCategoryId,
-                                 new SelectList(Model.BooksCategoriesList, "BookCategoryId", "BookCategoryName"),
-                                 "Select Cateogry", new { @class = "form-control" })
-
-                        @Html.ValidationMessageFor(model => model.BookCategoryId, null, new { @class = "text-danger" })<br />
-                        <b>Publication : </b>
-                        @Html.DropDownListFor(
-                                 model => model.BookPublisherId,
-                                 new SelectList(Model.BooksPublicationsList, "BookPublisherId", "BookPublisherName"),
-                                 "Select Publisher", new { @class = "form-control" })
-
-                        @Html.ValidationMessageFor(model => model.BookPublisherId, null, new { @class = "text-danger" })<br />
-                        <b>Quantity : </b>
-                        @Html.TextBoxFor(
-                                 model => model.BookQuantity,
-                                 null,
-                                 new { @type = "number", @class = "form-control", @placeholder = "Enter Book Quantity " }
-                                 )
-                        @Html.ValidationMessageFor(model => model.BookQuantity, null, new { @class = "text-danger" })<br />
+                    @Html.ValidationMessageFor(model => model.BookPublisherId, null, new { @class = "text-danger" })<br />
+                    <b>Quantity : </b>
+                    @Html.TextBoxFor(
+                             model => model.BookQuantity,
+                             null,
+                             new { @id = "SearchBookQuantity", @type = "number", @class = "form-control", @placeholder = "Enter Book Quantity " }
+                             )
+                    @Html.ValidationMessageFor(model => model.BookQuantity, null, new { @class = "text-danger" })<br />
 
 
-                        @Html.CheckBox(
-                            "IsActive", true,
-                            new { @class = "checkbox-inline" }) <label class="checkbox-inline"><b>Is Active</b></label>
+                    @Html.CheckBox(
+                        "IsActive",
+                        new {@class = "checkbox-inline" }) <label class="checkbox-inline"><b>Is Active</b></label>
 
-                        <br />
-                        <br />
-                    </div>
-                    <div class="modal-footer">
-                        <button id="fsubmit" type="submit" class="btn btn-success"> Add Book </button>
-                        <button id="freset" type="reset" class="btn btn-danger"> Clear Form </button>
-                    </div>
-                }
-                </form>
+                    <br />
+                    <br />
+                </div>
+                <div class="modal-footer">
+                    <button id="formSubmitBtn" type="button" class="btn btn-success"> Add Book </button>
+                    <button id="freset" type="reset" class="btn btn-danger"> Clear Form </button>
+                </div>
+
+            </div>
         </div>
     </div>
-</div>
+</form>
+
 
 
 <script>
-    $(document).ready(function () {    
+    $(document).ready(function () {
         SearchBtnClick();
+
+
 
         $("#submitBtn").click(function () {
             $("#PageNumber").val(1);
             SearchBtnClick();
         });
 
-        $("#fsubmit").click(function () {
+
+
+        $("#closeBtn").click(function () {
+            $("#msgPopup").html('');
             SearchBtnClick();
         });
-        $("#closeBtn").click(function () {
-            SearchBtnClick();
+
+        $("#freset").click(function () {
+            $("#msgPopup").html('');
+            this.form.reset();
         });
 
         $("body").on("click", "#SelectedPage", function () {
@@ -181,8 +185,6 @@
             SearchBtnClick();
         });
 
-
-
         $("#PageSize").change(function () {
             $("#PageNumber").val(1);
             SearchBtnClick();
@@ -194,6 +196,7 @@
             sessionStorage.clear();
             SearchBtnClick();
         });
+
         function SearchBtnClick() {
 
             $.ajax({
@@ -206,25 +209,23 @@
                 }
             });
         }
-
-
-
-        // for Add Book
-
-        $("#addBookBtn").click(function () {
-            var form = $("#addBookForm");
+        $("body").on("click", "#formSubmitBtn", function () {
+            var form = $("#popupAddBookForm");
             form.validate();
             if (form.valid()) {
                 AddBook();
             }
         });
 
+
         function AddBook() {
+            $("#exampleModalLabel").text("Add Book");
             $.ajax({
                 url: "/Books/AddBook",
                 method: "POST",
-                data: $("#addBookForm").serialize(),
+                data: $("#popupAddBookForm").serialize(),
                 success: function (data) {
+
                     console.log('in Success ' + data.BookId);
                     var msg = '<div class="alert alert-success"><strong> Success ! </strong> Book <strong>' + data.BookName + '</strong> Added Successfully.';
                     $("#msgPopup").html(msg);
@@ -236,20 +237,7 @@
                     $("#msgPopup").html(msg);
                 }
             });
-        }
-
-        function successCall() {
-            console.log("in On Success Fun");
-            alert("dfgh");
-            var msg = '<div class="alert alert-success"><strong> Success ! </strong> Book <strong>' + data.BookName + '</strong> Added Successfully.';
-            $("#msgPopup").html(msg);
-        }
-
-        function failCall() {
-            console.log("in On Fail Fun");
-            alert("dfgfghjykuli;oh");
-            var msg = '<div class="alert alert-danger"><strong> Success ! </strong> Book <strong>' + data.BookName + '</strong> Added Successfully.';
-            $("#msgPopup").html(msg);
+            stopImmediatePropagation();
         }
     });
 </script>
