--- a/DemoWebApplication/Views/Shared/_Layout.cshtml
+++ b/DemoWebApplication/Views/Shared/_Layout.cshtml
@@ -39,13 +39,13 @@
         </footer>
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
+    @*@Scripts.Render("~/bundles/jquery")*@
     @Scripts.Render("~/bundles/bootstrap")
-    <script src="~/Scripts/jquery-3.6.0.js"></script>
+    @*<script src="~/Scripts/jquery-3.6.0.js"></script>
     <script src="~/Scripts/jquery.validate.js"></script>
     <script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
     <script src="~/Scripts/jquery.unobtrusive-ajax.js"></script>
-    <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
+    <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>*@
     @RenderSection("scripts", required: false)
 </body>
 </html>
